# ai.djai

./: .dockerignore  .env.example  .gitignore  .mcp.json  DSP_CONTROLS_SUMMARY.md  HQPLAYER_QUICKSTART.md  P2P_NETWORK.md  PROGRESS.md  README.md  claude.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  Dockerfile.tracker  app_keys.py  assistant.py  audio_analysis.py  claude_code_runner.py  claude_dj_prompt.py  cli.py  config.py  database.py  embeddings.py  genius.py  hqplayer_client.py  lastfm.py  lastfm_auth.py  lrclib.py  lyrics_embeddings.py  main.py  mcp-docker.json  mcp-windows.json  migrate_paths.py  models.py  normalize_artists.py  normalize_genres.py  playback_tracker.py  requirements-base.txt  requirements-torch-cpu.txt  requirements-torch-gpu.txt  requirements.tracker.txt  requirements.txt  scanner.py  search.py  sql_queries.py  text_embeddings.py  track_enrichment.py  track_filter.py  uuid_utils.py
backend/providers/: __init__.py  anthropic_provider.py  base.py  claude_code.py  groq_provider.py  openai_compat.py  openai_provider.py
backend/routers/: chat.py  player.py
backend/static/: app.js  index.html  style.css
backend/tools/: __init__.py  (+6 more)
desktop/: api_client.py  build.py  config_manager.py  db_init.py  launcher.py  node_identity.py  python_env.py  requirements.txt  service_manager.py  settings.py  tray.py  updater.py  utils.py  wizard.py
docs/: DATABASE_ARCHITECTURE.md  HQPLAYER_INTEGRATION.md  HQPLAYER_KNOWLEDGE_BASE.md  README.md
mcp/: hqplayer_server.py  pyproject.toml
scripts/: init_db.sql  migrate_to_uuid.py
(+11 files in other folders)
