[project]
name = "hqplayer-mcp"
version = "0.1.0"
description = "MCP server for HQPlayer control and music library search"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.24.0",
]

[project.scripts]
hqplayer-mcp = "hqplayer_server:main"
